Add dependency on googleapis proto; Annotate the service protobuf for REST transcoding

--- a/src/main/realworld/proto/BUILD
+++ b/src/main/realworld/proto/BUILD
@@ -6,6 +6,7 @@ proto_library(
     name = "realworld_proto",
     srcs = glob(["*.proto"]),
     deps = [
+        "@googleapis//:annotations_proto",
         "@com_google_protobuf//:empty_proto",
         "@com_google_protobuf//:timestamp_proto",
     ],
