Initial backend implementation which passes all API spec tests

--- a/src/main/java/realworld/infrastructure/exceptions/BUILD
+++ b/src/main/java/realworld/infrastructure/exceptions/BUILD
@@ -3,5 +3,7 @@ package(default_visibility = ["//visibility:public"])
 java_library(
   name = "exceptions",
   srcs = glob(["*.java"]),
-  deps = [],
+  deps = [
+    "@io_grpc_grpc_java//core",
+  ],
 )
