update dependencies and upgrade to bazel 4.0.0

--- a/src/main/java/realworld/processors/BUILD
+++ b/src/main/java/realworld/processors/BUILD
@@ -4,12 +4,12 @@ java_library(
     name = "processors",
     srcs = glob(["*.java"]),
     deps = [
-        "@aopalliance//jar",
+        "@aopalliance_aopalliance//jar",
         "@com_google_guava_guava//jar",
         "@com_google_inject_guice//jar",
         "@com_google_protobuf//:protobuf_java",
         "@io_grpc_grpc_java//stub",
-        "@javax_inject//jar",
+        "@javax_inject_javax_inject//jar",
         "//src/main/realworld/proto:realworld_java_grpc",
         "//src/main/realworld/proto:realworld_java_proto",
         "//src/main/realworld/proto/internal:internal_java_proto",
