--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ addons:
       - pkg-config
 
 before_install:
-  - wget https://github.com/bazelbuild/bazel/releases/download/0.24.1/bazel_0.24.1-linux-x86_64.deb
-  - sha256sum -c tools/bazel_0.24.1-linux-x86_64.deb.sha256
-  - sudo dpkg -i bazel_0.24.1-linux-x86_64.deb
+  - wget https://github.com/bazelbuild/bazel/releases/download/4.0.0/bazel-4.0.0-linux-x86_64
+  - sha256sum -c tools/bazel-4.0.0-linux-x86_64.sha256
+  - sudo dpkg -i bazel-4.0.0-linux-x86_64
 
 script:
   - bazel --bazelrc=tools/bazel.travis.rc build //src/main/...
